fix: fix bug with wrong position rights

--- a/travel/sass/blocks/_footer.scss
+++ b/travel/sass/blocks/_footer.scss
@@ -9,7 +9,7 @@
         align-items: center;
         padding: 0 121px;
         .rights {
-            padding-right: 51px;
+            padding-right: 108px;
             font-family: 'Red Hat Text';
             font-style: normal;
             font-weight: 500;
